When the header scrolls out of view, fix the map container to the top of the screen.

--- a/app/assets/stylesheets/read/map.less
+++ b/app/assets/stylesheets/read/map.less
@@ -9,4 +9,9 @@
 
   background: #bbb;
 
+  &.fixed {
+    position: fixed;
+    top: 0;
+  }
+
 }
